--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": ".eleventy.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "eleventy --serve --watch"
+    "start": "concurrently \"npm run tailwind\" \"eleventy --serve --watch\"",
+    "tailwind": "npx tailwindcss -i src/css/tailwind.css -o _site/css/tailwind.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "concurrently": "^9.1.2",
     "tailwindcss": "^3.4.17"
   }
 }
